Overflow fix

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   overflow: hidden;
 
